--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,60 @@
     transform: rotate(360deg);
   }
 }
+.Counter-Cont{
+display: flex;
+gap:10px;
+}
+
+.App {
+  font-family: sans-serif;
+  padding: 0.1vw;
+  background-color: black;
+}
+.movie-head-pic {
+  padding-right: 23vw;
+  height: 10vw;
+  width: 20vw;
+}
+
+.poster {
+  height: 25vw;
+  width: 35vw;
+  padding: 3vw;
+  Object-fit : cover
+}
+.movie {
+  padding: 2vw;
+  display: flex;
+  font-size: 1.2vw;
+  /*background-color: rgb(236, 236, 228);
+*/
+  color: white;
+}
+.summary {
+  padding: 2vw;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+.movie-detail {
+  height: 19vw;
+  width: 35vw;
+  padding: 5vw;
+  border: 1px solid saddlebrown;
+  color: rgb(238, 238, 194);
+}
+.heaad {
+  color: rgb(224, 202, 60);
+}
+h1 {
+  padding-top: 1.5vw;
+  font-size: 3vw;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  text-align: center;
+}
+.header {
+  display: flex;
+}
+button{
+  background-color:black ;
+  color: white;
+}
